# -GPU-Profiling-Tool

./: .gitignore  CMakeLists.txt  readme.txt  requirements.txt
backend/: app.py
backend/static/: script.js  styles.css
backend/templates/: index.html
profiling_module/: gpu_profiling.cpp  opencl_profiling.cpp
